# rust-chess-engine

./: Cargo.toml  perf.data.old
benches/: my_benchmark.rs
src/: analyzer.rs  board.rs  brute.rs  echo_client.rs  echo_server.rs  lib.rs  main.rs  v2.rs
