[package]
name = "chess"
version = "0.1.0"
authors = ["Lucas Simpson <lucassimpson05@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
#primitive_types = "0.9.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug = true
